backend/restapi/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> gen_goto_main more_vars more_func main
Rule 2     gen_goto_main -> <empty>
Rule 3     more_vars -> vars
Rule 4     more_vars -> <empty>
Rule 5     vars -> var_type vars_aux SEMICOLON more_vars
Rule 6     var_type -> BOOL
Rule 7     var_type -> INT
Rule 8     var_type -> DOUBLE
Rule 9     vars_aux -> ID to_var_table arr var_assign more_vars_aux
Rule 10    to_var_table -> <empty>
Rule 11    var_assign -> EQUALS var_cte
Rule 12    var_assign -> <empty>
Rule 13    more_vars_aux -> COMMA vars_aux
Rule 14    more_vars_aux -> <empty>
Rule 15    arr -> LSQRTBRACKET const register_space RSQRTBRACKET
Rule 16    arr -> <empty>
Rule 17    register_space -> <empty>
Rule 18    var_cte -> const to_pilaOp
Rule 19    var_cte -> ID to_pilaOp arr_par
Rule 20    var_cte -> func_call to_pilaOp
Rule 21    const -> CTEINT
Rule 22    const -> CTEDOUBLE
Rule 23    const -> CTEBOOL
Rule 24    more_func -> func
Rule 25    more_func -> <empty>
Rule 26    func -> FUNC func_type ID to_proc_dir LPAR arguments RPAR func_block more_func
Rule 27    to_proc_dir -> <empty>
Rule 28    func_type -> VOID
Rule 29    func_type -> BOOL
Rule 30    func_type -> INT
Rule 31    func_type -> DOUBLE
Rule 32    arguments -> var_type ID to_args more_args
Rule 33    arguments -> <empty>
Rule 34    more_args -> COMMA var_type ID to_args more_args
Rule 35    more_args -> <empty>
Rule 36    to_args -> <empty>
Rule 37    func_block -> LBRACKET more_vars actual_quad_no more_statement gen_endproc_quad RBRACKET
Rule 38    actual_quad_no -> <empty>
Rule 39    gen_endproc_quad -> <empty>
Rule 40    more_statement -> statement more_statement
Rule 41    more_statement -> <empty>
Rule 42    statement -> read
Rule 43    statement -> write
Rule 44    statement -> return_stmt
Rule 45    statement -> cycle
Rule 46    statement -> condition
Rule 47    statement -> assignation
Rule 48    statement -> func_call SEMICOLON
Rule 49    read -> READ LPAR ID to_pilaOp arr_par RPAR gen_read_quad SEMICOLON
Rule 50    gen_read_quad -> <empty>
Rule 51    write -> WRITE LPAR exp RPAR gen_write_quad SEMICOLON
Rule 52    gen_write_quad -> <empty>
Rule 53    return_stmt -> RETURN exp gen_return_quad SEMICOLON
Rule 54    gen_return_quad -> <empty>
Rule 55    cycle -> WHILE cycle_start LPAR expression RPAR check_type block cycle_end
Rule 56    cycle_start -> <empty>
Rule 57    cycle_end -> <empty>
Rule 58    condition -> IF LPAR expression RPAR check_type block else_posible fill_end_condition
Rule 59    else_posible -> ELSE gen_goto block
Rule 60    else_posible -> <empty>
Rule 61    gen_goto -> <empty>
Rule 62    fill_end_condition -> <empty>
Rule 63    check_type -> <empty>
Rule 64    assignation -> ID to_pilaOp arr_par EQUALS expression gen_assignation_quad SEMICOLON
Rule 65    gen_assignation_quad -> <empty>
Rule 66    func_call -> ID is_valid_func LPAR gen_era push_false_bottom params pop_false_bottom RPAR gen_go_sub
Rule 67    params -> exp check_args more_params
Rule 68    params -> <empty>
Rule 69    more_params -> COMMA exp check_args more_params
Rule 70    more_params -> <empty>
Rule 71    check_args -> <empty>
Rule 72    is_valid_func -> <empty>
Rule 73    gen_era -> <empty>
Rule 74    gen_go_sub -> <empty>
Rule 75    block -> LBRACKET more_statement RBRACKET
Rule 76    arr_par -> LSQRTBRACKET exp RSQRTBRACKET
Rule 77    arr_par -> <empty>
Rule 78    expression -> conc gen_conc_quad expression_aux
Rule 79    expression_aux -> ao add_to_pilaOptr conc gen_conc_quad expression_aux
Rule 80    expression_aux -> <empty>
Rule 81    gen_conc_quad -> <empty>
Rule 82    conc -> exp gen_comp_quad conc_aux
Rule 83    conc_aux -> comp add_to_pilaOptr exp gen_comp_quad
Rule 84    conc_aux -> <empty>
Rule 85    gen_comp_quad -> <empty>
Rule 86    exp -> term gen_term_quad exp_aux
Rule 87    exp_aux -> pl add_to_pilaOptr term gen_term_quad exp_aux
Rule 88    exp_aux -> <empty>
Rule 89    gen_term_quad -> <empty>
Rule 90    term -> factor gen_factor_quad term_aux
Rule 91    term_aux -> dm add_to_pilaOptr factor gen_factor_quad term_aux
Rule 92    term_aux -> <empty>
Rule 93    gen_factor_quad -> <empty>
Rule 94    factor -> LPAR add_to_pilaOptr expression RPAR pop_false_bottom
Rule 95    factor -> var_cte
Rule 96    ao -> AND
Rule 97    ao -> OR
Rule 98    comp -> GREATER
Rule 99    comp -> LESS
Rule 100   comp -> GREATEROREQUAL
Rule 101   comp -> LESSOREQUAL
Rule 102   comp -> EQUALEQUALS
Rule 103   comp -> DIFFERENT
Rule 104   pl -> PLUS
Rule 105   pl -> MINUS
Rule 106   to_pilaOp -> <empty>
Rule 107   add_to_pilaOptr -> <empty>
Rule 108   push_false_bottom -> <empty>
Rule 109   pop_false_bottom -> <empty>
Rule 110   dm -> MULTIPLICATION
Rule 111   dm -> DIVISION
Rule 112   dm -> MOD
Rule 113   main -> MAIN main_to_proc_dir main_block
Rule 114   main_to_proc_dir -> <empty>
Rule 115   main_block -> LBRACKET more_vars more_statement RBRACKET gen_end_quad
Rule 116   gen_end_quad -> <empty>

Terminals, with rules where they appear

AND                  : 96
BOOL                 : 6 29
COMMA                : 13 34 69
CTEBOOL              : 23
CTEDOUBLE            : 22
CTEINT               : 21
DIFFERENT            : 103
DIVISION             : 111
DOUBLE               : 8 31
ELSE                 : 59
EQUALEQUALS          : 102
EQUALS               : 11 64
FUNC                 : 26
GREATER              : 98
GREATEROREQUAL       : 100
ID                   : 9 19 26 32 34 49 64 66
IF                   : 58
INT                  : 7 30
LBRACKET             : 37 75 115
LESS                 : 99
LESSOREQUAL          : 101
LPAR                 : 26 49 51 55 58 66 94
LSQRTBRACKET         : 15 76
MAIN                 : 113
MINUS                : 105
MOD                  : 112
MULTIPLICATION       : 110
OR                   : 97
PLUS                 : 104
RBRACKET             : 37 75 115
READ                 : 49
RETURN               : 53
RPAR                 : 26 49 51 55 58 66 94
RSQRTBRACKET         : 15 76
SEMICOLON            : 5 48 49 51 53 64
VOID                 : 28
WHILE                : 55
WRITE                : 51
error                : 

Nonterminals, with rules where they appear

actual_quad_no       : 37
add_to_pilaOptr      : 79 83 87 91 94
ao                   : 79
arguments            : 26
arr                  : 9
arr_par              : 19 49 64
assignation          : 47
block                : 55 58 59
check_args           : 67 69
check_type           : 55 58
comp                 : 83
conc                 : 78 79
conc_aux             : 82
condition            : 46
const                : 15 18
cycle                : 45
cycle_end            : 55
cycle_start          : 55
dm                   : 91
else_posible         : 58
exp                  : 51 53 67 69 76 82 83
exp_aux              : 86 87
expression           : 55 58 64 94
expression_aux       : 78 79
factor               : 90 91
fill_end_condition   : 58
func                 : 24
func_block           : 26
func_call            : 20 48
func_type            : 26
gen_assignation_quad : 64
gen_comp_quad        : 82 83
gen_conc_quad        : 78 79
gen_end_quad         : 115
gen_endproc_quad     : 37
gen_era              : 66
gen_factor_quad      : 90 91
gen_go_sub           : 66
gen_goto             : 59
gen_goto_main        : 1
gen_read_quad        : 49
gen_return_quad      : 53
gen_term_quad        : 86 87
gen_write_quad       : 51
is_valid_func        : 66
main                 : 1
main_block           : 113
main_to_proc_dir     : 113
more_args            : 32 34
more_func            : 1 26
more_params          : 67 69
more_statement       : 37 40 75 115
more_vars            : 1 5 37 115
more_vars_aux        : 9
params               : 66
pl                   : 87
pop_false_bottom     : 66 94
program              : 0
push_false_bottom    : 66
read                 : 42
register_space       : 15
return_stmt          : 44
statement            : 40
term                 : 86 87
term_aux             : 90 91
to_args              : 32 34
to_pilaOp            : 18 19 20 49 64
to_proc_dir          : 26
to_var_table         : 9
var_assign           : 9
var_cte              : 11 95
var_type             : 5 32 34
vars                 : 3
vars_aux             : 5 13
write                : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . gen_goto_main more_vars more_func main
    (2) gen_goto_main -> .

    BOOL            reduce using rule 2 (gen_goto_main -> .)
    INT             reduce using rule 2 (gen_goto_main -> .)
    DOUBLE          reduce using rule 2 (gen_goto_main -> .)
    FUNC            reduce using rule 2 (gen_goto_main -> .)
    MAIN            reduce using rule 2 (gen_goto_main -> .)

    gen_goto_main                  shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> gen_goto_main . more_vars more_func main
    (3) more_vars -> . vars
    (4) more_vars -> .
    (5) vars -> . var_type vars_aux SEMICOLON more_vars
    (6) var_type -> . BOOL
    (7) var_type -> . INT
    (8) var_type -> . DOUBLE

    FUNC            reduce using rule 4 (more_vars -> .)
    MAIN            reduce using rule 4 (more_vars -> .)
    BOOL            shift and go to state 7
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6

    vars                           shift and go to state 3
    var_type                       shift and go to state 4
    more_vars                      shift and go to state 8

state 2

    (0) S' -> program .



state 3

    (3) more_vars -> vars .

    READ            reduce using rule 3 (more_vars -> vars .)
    WRITE           reduce using rule 3 (more_vars -> vars .)
    RETURN          reduce using rule 3 (more_vars -> vars .)
    WHILE           reduce using rule 3 (more_vars -> vars .)
    IF              reduce using rule 3 (more_vars -> vars .)
    ID              reduce using rule 3 (more_vars -> vars .)
    RBRACKET        reduce using rule 3 (more_vars -> vars .)
    FUNC            reduce using rule 3 (more_vars -> vars .)
    MAIN            reduce using rule 3 (more_vars -> vars .)


state 4

    (5) vars -> var_type . vars_aux SEMICOLON more_vars
    (9) vars_aux -> . ID to_var_table arr var_assign more_vars_aux

    ID              shift and go to state 10

    vars_aux                       shift and go to state 9

state 5

    (7) var_type -> INT .

    ID              reduce using rule 7 (var_type -> INT .)


state 6

    (8) var_type -> DOUBLE .

    ID              reduce using rule 8 (var_type -> DOUBLE .)


state 7

    (6) var_type -> BOOL .

    ID              reduce using rule 6 (var_type -> BOOL .)


state 8

    (1) program -> gen_goto_main more_vars . more_func main
    (24) more_func -> . func
    (25) more_func -> .
    (26) func -> . FUNC func_type ID to_proc_dir LPAR arguments RPAR func_block more_func

    MAIN            reduce using rule 25 (more_func -> .)
    FUNC            shift and go to state 13

    more_func                      shift and go to state 12
    func                           shift and go to state 11

state 9

    (5) vars -> var_type vars_aux . SEMICOLON more_vars

    SEMICOLON       shift and go to state 14


state 10

    (9) vars_aux -> ID . to_var_table arr var_assign more_vars_aux
    (10) to_var_table -> .

    LSQRTBRACKET    reduce using rule 10 (to_var_table -> .)
    EQUALS          reduce using rule 10 (to_var_table -> .)
    COMMA           reduce using rule 10 (to_var_table -> .)
    SEMICOLON       reduce using rule 10 (to_var_table -> .)

    to_var_table                   shift and go to state 15

state 11

    (24) more_func -> func .

    MAIN            reduce using rule 24 (more_func -> func .)


state 12

    (1) program -> gen_goto_main more_vars more_func . main
    (113) main -> . MAIN main_to_proc_dir main_block

    MAIN            shift and go to state 17

    main                           shift and go to state 16

state 13

    (26) func -> FUNC . func_type ID to_proc_dir LPAR arguments RPAR func_block more_func
    (28) func_type -> . VOID
    (29) func_type -> . BOOL
    (30) func_type -> . INT
    (31) func_type -> . DOUBLE

    VOID            shift and go to state 20
    BOOL            shift and go to state 22
    INT             shift and go to state 21
    DOUBLE          shift and go to state 19

    func_type                      shift and go to state 18

state 14

    (5) vars -> var_type vars_aux SEMICOLON . more_vars
    (3) more_vars -> . vars
    (4) more_vars -> .
    (5) vars -> . var_type vars_aux SEMICOLON more_vars
    (6) var_type -> . BOOL
    (7) var_type -> . INT
    (8) var_type -> . DOUBLE

    FUNC            reduce using rule 4 (more_vars -> .)
    MAIN            reduce using rule 4 (more_vars -> .)
    READ            reduce using rule 4 (more_vars -> .)
    WRITE           reduce using rule 4 (more_vars -> .)
    RETURN          reduce using rule 4 (more_vars -> .)
    WHILE           reduce using rule 4 (more_vars -> .)
    IF              reduce using rule 4 (more_vars -> .)
    ID              reduce using rule 4 (more_vars -> .)
    RBRACKET        reduce using rule 4 (more_vars -> .)
    BOOL            shift and go to state 7
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6

    vars                           shift and go to state 3
    more_vars                      shift and go to state 23
    var_type                       shift and go to state 4

state 15

    (9) vars_aux -> ID to_var_table . arr var_assign more_vars_aux
    (15) arr -> . LSQRTBRACKET const register_space RSQRTBRACKET
    (16) arr -> .

    LSQRTBRACKET    shift and go to state 25
    EQUALS          reduce using rule 16 (arr -> .)
    COMMA           reduce using rule 16 (arr -> .)
    SEMICOLON       reduce using rule 16 (arr -> .)

    arr                            shift and go to state 24

state 16

    (1) program -> gen_goto_main more_vars more_func main .

    $end            reduce using rule 1 (program -> gen_goto_main more_vars more_func main .)


state 17

    (113) main -> MAIN . main_to_proc_dir main_block
    (114) main_to_proc_dir -> .

    LBRACKET        reduce using rule 114 (main_to_proc_dir -> .)

    main_to_proc_dir               shift and go to state 26

state 18

    (26) func -> FUNC func_type . ID to_proc_dir LPAR arguments RPAR func_block more_func

    ID              shift and go to state 27


state 19

    (31) func_type -> DOUBLE .

    ID              reduce using rule 31 (func_type -> DOUBLE .)


state 20

    (28) func_type -> VOID .

    ID              reduce using rule 28 (func_type -> VOID .)


state 21

    (30) func_type -> INT .

    ID              reduce using rule 30 (func_type -> INT .)


state 22

    (29) func_type -> BOOL .

    ID              reduce using rule 29 (func_type -> BOOL .)


state 23

    (5) vars -> var_type vars_aux SEMICOLON more_vars .

    FUNC            reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    MAIN            reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    READ            reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    WRITE           reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    RETURN          reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    WHILE           reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    IF              reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    ID              reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)
    RBRACKET        reduce using rule 5 (vars -> var_type vars_aux SEMICOLON more_vars .)


state 24

    (9) vars_aux -> ID to_var_table arr . var_assign more_vars_aux
    (11) var_assign -> . EQUALS var_cte
    (12) var_assign -> .

    EQUALS          shift and go to state 28
    COMMA           reduce using rule 12 (var_assign -> .)
    SEMICOLON       reduce using rule 12 (var_assign -> .)

    var_assign                     shift and go to state 29

state 25

    (15) arr -> LSQRTBRACKET . const register_space RSQRTBRACKET
    (21) const -> . CTEINT
    (22) const -> . CTEDOUBLE
    (23) const -> . CTEBOOL

    CTEINT          shift and go to state 33
    CTEDOUBLE       shift and go to state 30
    CTEBOOL         shift and go to state 32

    const                          shift and go to state 31

state 26

    (113) main -> MAIN main_to_proc_dir . main_block
    (115) main_block -> . LBRACKET more_vars more_statement RBRACKET gen_end_quad

    LBRACKET        shift and go to state 35

    main_block                     shift and go to state 34

state 27

    (26) func -> FUNC func_type ID . to_proc_dir LPAR arguments RPAR func_block more_func
    (27) to_proc_dir -> .

    LPAR            reduce using rule 27 (to_proc_dir -> .)

    to_proc_dir                    shift and go to state 36

state 28

    (11) var_assign -> EQUALS . var_cte
    (18) var_cte -> . const to_pilaOp
    (19) var_cte -> . ID to_pilaOp arr_par
    (20) var_cte -> . func_call to_pilaOp
    (21) const -> . CTEINT
    (22) const -> . CTEDOUBLE
    (23) const -> . CTEBOOL
    (66) func_call -> . ID is_valid_func LPAR gen_era push_false_bottom params pop_false_bottom RPAR gen_go_sub

    ID              shift and go to state 40
    CTEINT          shift and go to state 33
    CTEDOUBLE       shift and go to state 30
    CTEBOOL         shift and go to state 32

    func_call                      shift and go to state 37
    const                          shift and go to state 38
    var_cte                        shift and go to state 39

state 29

    (9) vars_aux -> ID to_var_table arr var_assign . more_vars_aux
    (13) more_vars_aux -> . COMMA vars_aux
    (14) more_vars_aux -> .

    COMMA           shift and go to state 42
    SEMICOLON       reduce using rule 14 (more_vars_aux -> .)

    more_vars_aux                  shift and go to state 41

state 30

    (22) const -> CTEDOUBLE .

    MULTIPLICATION  reduce using rule 22 (const -> CTEDOUBLE .)
    DIVISION        reduce using rule 22 (const -> CTEDOUBLE .)
    MOD             reduce using rule 22 (const -> CTEDOUBLE .)
    PLUS            reduce using rule 22 (const -> CTEDOUBLE .)
    MINUS           reduce using rule 22 (const -> CTEDOUBLE .)
    GREATER         reduce using rule 22 (const -> CTEDOUBLE .)
    LESS            reduce using rule 22 (const -> CTEDOUBLE .)
    GREATEROREQUAL  reduce using rule 22 (const -> CTEDOUBLE .)
    LESSOREQUAL     reduce using rule 22 (const -> CTEDOUBLE .)
    EQUALEQUALS     reduce using rule 22 (const -> CTEDOUBLE .)
    DIFFERENT       reduce using rule 22 (const -> CTEDOUBLE .)
    AND             reduce using rule 22 (const -> CTEDOUBLE .)
    OR              reduce using rule 22 (const -> CTEDOUBLE .)
    SEMICOLON       reduce using rule 22 (const -> CTEDOUBLE .)
    COMMA           reduce using rule 22 (const -> CTEDOUBLE .)
    RPAR            reduce using rule 22 (const -> CTEDOUBLE .)
    RSQRTBRACKET    reduce using rule 22 (const -> CTEDOUBLE .)


state 31

    (15) arr -> LSQRTBRACKET const . register_space RSQRTBRACKET
    (17) register_space -> .

    RSQRTBRACKET    reduce using rule 17 (register_space -> .)

    register_space                 shift and go to state 43

state 32

    (23) const -> CTEBOOL .

    MULTIPLICATION  reduce using rule 23 (const -> CTEBOOL .)
    DIVISION        reduce using rule 23 (const -> CTEBOOL .)
    MOD             reduce using rule 23 (const -> CTEBOOL .)
    PLUS            reduce using rule 23 (const -> CTEBOOL .)
    MINUS           reduce using rule 23 (const -> CTEBOOL .)
    GREATER         reduce using rule 23 (const -> CTEBOOL .)
    LESS            reduce using rule 23 (const -> CTEBOOL .)
    GREATEROREQUAL  reduce using rule 23 (const -> CTEBOOL .)
    LESSOREQUAL     reduce using rule 23 (const -> CTEBOOL .)
    EQUALEQUALS     reduce using rule 23 (const -> CTEBOOL .)
    DIFFERENT       reduce using rule 23 (const -> CTEBOOL .)
    AND             reduce using rule 23 (const -> CTEBOOL .)
    OR              reduce using rule 23 (const -> CTEBOOL .)
    SEMICOLON       reduce using rule 23 (const -> CTEBOOL .)
    COMMA           reduce using rule 23 (const -> CTEBOOL .)
    RPAR            reduce using rule 23 (const -> CTEBOOL .)
    RSQRTBRACKET    reduce using rule 23 (const -> CTEBOOL .)


state 33

    (21) const -> CTEINT .

    MULTIPLICATION  reduce using rule 21 (const -> CTEINT .)
    DIVISION        reduce using rule 21 (const -> CTEINT .)
    MOD             reduce using rule 21 (const -> CTEINT .)
    PLUS            reduce using rule 21 (const -> CTEINT .)
    MINUS           reduce using rule 21 (const -> CTEINT .)
    GREATER         reduce using rule 21 (const -> CTEINT .)
    LESS            reduce using rule 21 (const -> CTEINT .)
    GREATEROREQUAL  reduce using rule 21 (const -> CTEINT .)
    LESSOREQUAL     reduce using rule 21 (const -> CTEINT .)
    EQUALEQUALS     reduce using rule 21 (const -> CTEINT .)
    DIFFERENT       reduce using rule 21 (const -> CTEINT .)
    AND             reduce using rule 21 (const -> CTEINT .)
    OR              reduce using rule 21 (const -> CTEINT .)
    SEMICOLON       reduce using rule 21 (const -> CTEINT .)
    COMMA           reduce using rule 21 (const -> CTEINT .)
    RPAR            reduce using rule 21 (const -> CTEINT .)
    RSQRTBRACKET    reduce using rule 21 (const -> CTEINT .)


state 34

    (113) main -> MAIN main_to_proc_dir main_block .

    $end            reduce using rule 113 (main -> MAIN main_to_proc_dir main_block .)


state 35

    (115) main_block -> LBRACKET . more_vars more_statement RBRACKET gen_end_quad
    (3) more_vars -> . vars
    (4) more_vars -> .
    (5) vars -> . var_type vars_aux SEMICOLON more_vars
    (6) var_type -> . BOOL
    (7) var_type -> . INT
    (8) var_type -> . DOUBLE

    READ            reduce using rule 4 (more_vars -> .)
    WRITE           reduce using rule 4 (more_vars -> .)
    RETURN          reduce using rule 4 (more_vars -> .)
    WHILE           reduce using rule 4 (more_vars -> .)
    IF              reduce using rule 4 (more_vars -> .)
    ID              reduce using rule 4 (more_vars -> .)
    RBRACKET        reduce using rule 4 (more_vars -> .)
    BOOL            shift and go to state 7
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6

    vars                           shift and go to state 3
    var_type                       shift and go to state 4
    more_vars                      shift and go to state 44

state 36

    (26) func -> FUNC func_type ID to_proc_dir . LPAR arguments RPAR func_block more_func

    LPAR            shift and go to state 45


state 37

    (20) var_cte -> func_call . to_pilaOp
    (106) to_pilaOp -> .
